test/valid/test24.sl
if not false then print("test");