test/invalid/test6.sl
if not fales then print("test");